<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">hangmanSPIDER2</string>
    <string name="textview">TextView</string>
    <string name="check">check</string>
    <string name="enter_the_letter">enter the letter</string>
    <string name="no_of_tries_left">no of tries left</string>
    <string name="sorry_you_lost">SORRY, YOU LOST</string>
    <string name="click_to_exit">CLICK TO EXIT</string>
    <string name="todo">TODO</string>
    <string name="congartulation_you_won_the_game">CONGARTULATION YOU WON THE GAME</string>

    <string name="click_heer_to_exit">click heer to exit</string>


</resources>
