<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".Main3Activity">

    <ImageView
        android:id="@+id/imageView8"
        android:layout_width="342dp"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="0dp"
        android:background="#FFFFFF"
        app:srcCompat="@drawable/hang"
        android:contentDescription="@string/todo" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/imageView8"
        android:layout_marginTop="40dp"
        android:text="@string/sorry_you_lost"
        android:textSize="36sp"
        android:layout_alignLeft="@+id/imageView8" />

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="86dp"
        android:layout_marginEnd="128dp"
        android:text="@string/click_to_exit"
        android:layout_alignParentRight="true"
        android:layout_marginRight="128dp" />
</RelativeLayout>